# nomad-distro-LAP

./: README.md  docker-compose.yaml  pyproject.toml
configs/: nomad.yaml
